--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <title>Eshop-Ecommerce website design.</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/bootstrap-icons.css">
+    <link rel="stylesheet" href="sass/main.scss">
 </head>
 <body>
 
 
     <h2 class="text-danger text-center">Ready to go</h2>
     
+
+
+    <script src="assets/js/bootstrap.bundle.js"></script>
 </body>
 </html>
